# webclient

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .travis.yml  CMakeLists.txt  Jamfile  README.md
cmake/: Config.cmake.in  HunterGate.cmake  boost_webclient.pc.in
cmake/Hunter/: config.cmake
doc/: Jamfile  source.dox
doc/qbk/: index.xml  main.qbk  quickref.xml
doc/xsl/: config.xsl  includes.xsl
example/: CMakeLists.txt  Jamfile  forty_two.cpp
include/boost/library_template/: config.hpp  forty_two.hpp  src.hpp
include/boost/library_template/detail/: config.hpp
include/boost/library_template/impl/: forty_two.ipp
include/boost/webclient/: config.hpp  connection_pool.hpp  error.hpp  forty_two.hpp  get.hpp  http_response.hpp  internet_session.hpp  internet_session_iface.hpp  print_to.hpp  session.hpp  src.hpp
include/boost/webclient/asio/: basic_internet_session.hpp  config.hpp  connection.hpp  connection_pool_impl.hpp  get_op.hpp  has_error_code.hpp  has_resolver.hpp  has_timeout.hpp  http_response.hpp
include/boost/webclient/async/: future.hpp  future.ipp  future_types.hpp  promise.ipp
include/boost/webclient/async/detail/: future_invoker.hpp  future_invoker_base.hpp  future_state_impl.hpp  future_wait_op.hpp
include/boost/webclient/detail/: config.hpp
include/boost/webclient/impl/: error.ipp  forty_two.ipp  get.hpp
include/boost/webclient/impl/windows/: platform.hpp  session.hpp
include/boost/webclient/polyfill/: exchange.hpp  make_unique.hpp  optional.hpp  outcome.hpp  shared_composed_op.hpp  variant.hpp
include/boost/webclient/uri/: error.hpp  query_list.hpp  uri_impl.hpp
include/boost/webclient/windows/: internet_session.hpp
src/: src.cpp
src/boost/webclient/: connection_pool_impl.cpp  error.spec.cpp  get.spec.cpp  internet_session.cpp
src/boost/webclient/async/: future.spec.cpp
src/boost/webclient/async/detail/: future_invoker.spec.cpp  future_invoker_base.spec.cpp  future_state_impl.spec.cpp
src/boost/webclient/polyfill/: shared_composed_op.cpp  shared_composed_op.spec.cpp
src/boost/webclient/uri/: error.cpp  query_list.cpp  uri_impl.cpp  uri_impl.spec.cpp
test/: CMakeLists.txt  Jamfile  forty_two.cpp  get.cpp  main.cpp
test/boost/webclient/: main.spec.cpp
